src/App.css
:root {
    --clr-1: #ffffff;
    --clr-2: #d3e9ec;
    --clr-3: #373a36;
    --clr-4: #008bce;
    --clr-5: #f2a900;
    --clr-6: #99d420;  /*--clr-6: #99FF00;*/ /* --clr-6: #bfb800; */
    --clr-7: #d9d9d6;
    
}

/*===================================================================*/

body {
    overflow-x: hidden;
}

/*===================================================================*/
.top-part {
    background-color: var(--clr-4);
    color: var(--clr-1);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: calc(10px + 2vmin);
}
.title {
    text-align:center;
    font-size: 8.5vw;
    display: inline-block;
    font-weight: bold;
    margin-bottom: 0vw;
    width: 100%;
}
.title-text {
    display: inline-block;
    margin-left: 2%;
}
.touch-icon {
    fill: var(--clr-1);
    color: var(--clr-1);
    padding: 0% 0% 0% 0%;
    margin-bottom: 2vw;
    display: inline-block;
    width: 9vw;
}
.subtitle {
    text-align:center;
    font-size: 2.21vw;;
    display: inline-block;
    font-weight: lighter;
    width: 100%;
    padding-bottom: 10%;
    line-height: 3.15vw;
    margin-top: 0%;
    padding-top: 1%;
}
.slider-image {
    width: 100%;
    overflow: hidden;
    max-height: 50%;
}
.carousel .carousel-indicators button {
    background-color: transparent;
    border: 1px solid var(--clr-1);
    border-radius: 50%;
    width: 0.7vw;
    height: 0.7vw;
    margin-bottom: 2.9%;
    margin-left: 0.9%;
    margin-right: 0.9%;
}
.carousel .carousel-indicators button.active {
    background-color: var(--clr-1);
}
.carousel-control-next, .carousel-control-prev {
    padding: 0%;
    margin: -4%;
}
.carousel-control-next-icon, .carousel-control-prev-icon {
    display: inline-block;
    background: transparent no-repeat center center;
    background-size: 100% 100%;
    height: 5vw !important;
    width: 5vw !important;
}
/*===================================================================*/
.middle-part {
    background-color: var(--clr-2);
    color: var(--clr-3);
    font-size: calc(10px + 2vmin);
    padding: 2.5% 3%;
}
.adverts-container {
    display: flex;
    justify-content: center;
    align-content: center;
    flex-direction: row;
    width: 100%;
    font-size: calc(0px + 1.1vw);
    padding: 0%;
}
.adverts-title {
    display: grid;
    place-items: center;
    float: left;
    width: 8%;
    color: var(--clr-1);
    background-color: var(--clr-4);
    font-weight: bold;
    text-align: center;
    align-items: middle;
}
.adverts-content {
    float: right;
    width: 92%;
    color: var(--clr-3);
    background-color: var(--clr-7);
    padding: 0.7%;
    padding-left: 1.5%;
}
.cut-text {
    text-overflow: ellipsis;
    overflow: hidden; 
    width: 100%; 
    white-space: nowrap;
}
.adverts-content a {
    text-decoration: none;
    color: var(--clr-3);
}
.adverts-content a:hover {
    text-decoration: none;
    color: var(--clr-4);
}
.marquee {
    padding-right: 15%;
}
.buttons-container {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    grid-gap: 4%;
    padding-top: 2.5%;
    height: 8.8vw;
}
.menu-button {
    background-color: var(--clr-1);
    color: var(--clr-3);
    fill: var(--clr-3);
    overflow: hidden;
    width: 100%;
    display: inline-flex;
    cursor: pointer;
    text-decoration: none;
    border-top: 10px solid var(--clr-3);
    font-weight: 400;
}
.button-icon {
    width: 50%;
    padding: 5% 0%;
    margin-left: 15%;
    padding-right: 5%;
}
.cetec-icon {
    width: 60%;
    padding: 4%;
    margin-left: 20%;
}
.button-text {
    width: 50%;
    position: relative;
    text-align: left;
    font-size: calc(1.6vw + 2px);
    display: flex;
    align-items:center;
    line-height: 120%;
    margin-right: 20%;
}
.menu-button:hover, .menu-button:focus {
    color: var(--clr-1);
    fill: var(--clr-1);
    font-weight: bolder;
}
.book-button:hover, .book-button:focus {
    background-color: var(--clr-5);
    border-top: 10px solid var(--clr-5);
}
.hat-button:hover, .hat-button:focus {
    background-color: var(--clr-6);
    border-top: 10px solid var(--clr-6);
}
.teacher-button:hover, .teacher-button:focus {
    background-color: var(--clr-4);
    border-top: 10px solid var(--clr-4);
}
.cetec-button:hover, .cetec-button:focus {
    background-color: var(--clr-4);
    border-top: 10px solid var(--clr-4);
}
/*===================================================================*/
.bottom-part {
    background-color: var(--clr-3);
    color: var(--clr-1);
    font-size: calc(10px + 2vmin);
    width: 100%;
    display: inline-block;
    height: calc(10px+12vw);
    margin: 0% 0% -10% 0%; /* fix whitespace below footer */
}
.footer-text {
    font-size: calc(4px + 0.7vw);
    font-weight: lighter;
    line-height: 1vw;
    float: left;
    padding: 4%;
    vertical-align: middle;
}
.footer-text-bold {
    font-weight: bold;
}
.footer-image {
    float: right;
    padding: 2% 3% 2% 2%;
    max-width: calc(26% + 30px);
}
/*===================================================================*/
/*===================================================================*/
/*===================================================================*/
@media (max-width: 768px) {
    .slider-text {
        height: 100%;
    }
    .title {
        display: inline-block;
        font-size: 14vw;
    }
    .subtitle {
        display: inline-block;
        width: 85%;
        font-size: 4vw;
        line-height: 6vw;
        margin-bottom: 10%;
        padding-top: 2%;
    }
    
    .touch-icon {
        width: 20%;
        padding-top: 15%;
    }
    .title-text {
        display: block;
    }
    .carousel .carousel-indicators button {
        width: 1.8vw;
        height: 1.8vw;
        border-width: 1px;
        margin-bottom: 6%;
        margin-left: 2%;
        margin-right: 2%;
    }

    .slider-image {
        object-fit: cover;
        height: 109vw;
    }
    .carousel-control-next, .carousel-control-prev {
        margin: 0vw 1vw;
        height: 115%;
    }
    
    .carousel-control-next-icon, .carousel-control-prev-icon {
        height: 8vw !important;
        width: 8vw !important;
    }
    
    /*===================================================================*/
    .middle-part {
        padding: 0%;
    }
    .adverts-container {
        font-size: calc(8px + 1vw);
        padding: 3%;
    }
    .adverts-title {
        width: 20%;
        padding: 1.5%;
    }
    .adverts-content {
        width: 80%;
        padding: 1.5%;
        padding-left: 3%;
    }
    .buttons-container {
        grid-gap: 0.4%;
        padding: 0%;
        margin: 0%;
        height: calc(38vw);
        background-color: var(--clr-3);
    }
    .menu-button {
        height: 100%;
        display: inline-block;
        grid-template-columns: auto;
        grid-template-rows: auto auto;
        text-align: center;
    }
    .button-icon {
        width: 70%;
        height: 64%;
        padding: 10%;
        margin: 0%;
        padding-top: 25%;
        overflow: visible;
    }
    .button-text {
        width: 80%;
        text-align: center;
        font-size: calc(2vw + 5px);
        display: block;
        height: 36%;
        margin: auto;
    }
    .cetec-icon {
        width: 100%;
        padding: 10%;
        margin: 0%;
        height: 100%;
    }
    /*===================================================================*/
    .bottom-part {
        width: 100%;
        display: flex;
    }
    .footer-text {
        font-size: calc(5px + 0.8vw);
        line-height: 0.8vw;
        text-align: center;
        position: relative;
        left: 50%;
        transform: translateX(-50%);
        padding: 5% 3% 3% 3%;
    }
    
    .footer-image {
        position: absolute;
        visibility:hidden;
        display:none;
    }
}

